add script validation

--- a/index.html
+++ b/index.html
@@ -19,12 +19,24 @@
       </section>
       <section class="inputs">
         <div class="value">Try it free 7 days then $20/mo. thereafter</div>
-        <div>
-          <input type="text"  placeholder="First Name"/>
-          <input type="text" placeholder="Last Name "/>
-          <input type="email" placeholder="Email Address "/>
-          <input type="password" placeholder="Password"
+        <div class="style_inputs">
+          <input type="text"  placeholder="First Name" id="first_name" >
+          <i><img src="./ assets /icon-error.svg" alt=" img error" class="img_error"></i>
+          <i><img src="./ assets /success-icon.svg" alt="img success" class="img_success"></i>
+          <small>ERROR</small>
+          <input type="text" placeholder="Last Name " id="last_name"/>
+          <i><img src="./ assets /icon-error.svg" alt=" img error" class="img_error"></i>
+          <i><img src="./ assets /success-icon.svg" alt="img success" class="img_success"></i>
+          <small>ERROR</small>
+          <input type="email" placeholder="Email Address " id="email"/>
+          <i><img src="./ assets /icon-error.svg" alt=" img error" class="img_error"></i>
+          <i><img src="./ assets /success-icon.svg" alt="img success" class="img_success"></i>
+          <small>ERROR</small>
+          <input type="password" placeholder="Password" id="password"
           />
+          <i><img src="./ assets /icon-error.svg" alt=" img error" class="img_error"></i>
+          <i><img src="./ assets /success-icon.svg" alt="img success" class="img_success"></i>
+          <small>ERROR</small>
           <button>CLAIM YOUR FREE TRIAL</button>
         </div>
         <footer>By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></footer>
